Add visual effects on animals.