@@ -35,6 +35,7 @@ import com.csse3200.game.physics.components.ColliderComponent;
 import com.csse3200.game.physics.components.HitboxComponent;
 import com.csse3200.game.physics.components.PhysicsComponent;
 import com.csse3200.game.physics.components.PhysicsMovementComponent;
+import com.csse3200.game.rendering.AnimationEffectsComponent;
 import com.csse3200.game.rendering.AnimationRenderComponent;
 import com.csse3200.game.rendering.BlinkComponent;
 import com.csse3200.game.services.ServiceLocator;
@@ -65,7 +66,7 @@ public class NPCFactory {
   private static final String IDLE_LEFT_TAMED = "idle_left_tamed";
   private static final String IDLE_RIGHT_TAMED = "idle_right_tamed";
   private static final String WALK_LEFT_TAMED = "walk_left_tamed";
-    private static final String WALK_RIGHT_TAMED = "walk_right_tamed";
+  private static final String WALK_RIGHT_TAMED = "walk_right_tamed";
 
   private static final NPCConfigs configs =
       FileLoader.readClass(NPCConfigs.class, "configs/NPCs.json");
@@ -84,6 +85,7 @@ public class NPCFactory {
             ServiceLocator.getResourceService().getAsset("images/animals/chicken.atlas", TextureAtlas.class),
             16f
     );
+
 
     animator.addAnimation(IDLE_LEFT, Float.MAX_VALUE);
     animator.addAnimation(IDLE_RIGHT, Float.MAX_VALUE);
@@ -131,6 +133,14 @@ public class NPCFactory {
                     config.tamingProbability, config.favouriteFood));
 
     PhysicsUtils.setScaledCollider(chicken, 0.8f, 0.4f);
+
+    // configure animation effects position
+    AnimationEffectsComponent animationEffectsComponent = chicken.getComponent(AnimationEffectsComponent.class);
+    animationEffectsComponent.setOffset(new Vector2(
+            chicken.getScale().scl(0.5f).x - animationEffectsComponent.getScale().scl(0.5f).x,
+            chicken.getScale().y
+    ));
+
 
     return chicken;
   }
@@ -191,6 +201,13 @@ public class NPCFactory {
     cow.scaleHeight(1.8f);
     PhysicsUtils.setScaledCollider(cow, 0.7f, 0.4f);
 
+    // configure animation effects position
+    AnimationEffectsComponent animationEffectsComponent = cow.getComponent(AnimationEffectsComponent.class);
+    animationEffectsComponent.setOffset(new Vector2(
+            cow.getScale().scl(0.5f).x - animationEffectsComponent.getScale().scl(0.5f).x,
+            cow.getScale().y - 0.5f
+    ));
+
     return cow;
   }
 
@@ -229,8 +246,12 @@ public class NPCFactory {
                     config.tamingProbability, config.favouriteFood));
 
 
+
     astrolotl.scaleHeight(1.2f);
     PhysicsUtils.setScaledCollider(astrolotl, 0.9f, 0.4f);
+
+
+
     return astrolotl;
   }
 
@@ -266,13 +287,20 @@ public class NPCFactory {
             .addComponent(new CombatStatsComponent(10, 0))
             .addComponent(new HostileAnimationController())
             .addComponent(new OxygenEaterAttackPattern(1.5f, ProjectileFactory::createOxygenEaterProjectile))
-            .addComponent(new InteractionDetector(5f, new ArrayList<>(Arrays.asList(EntityType.PLAYER)))); // TODO: Do we want it to attack anything
+            .addComponent(new InteractionDetector(5f, new ArrayList<>(List.of(EntityType.PLAYER))));
 
     oxygenEater.scaleHeight(2f);
     oxygenEater.getComponent(ColliderComponent.class).setAsBoxAligned(new Vector2(1f, 1f),
             PhysicsComponent.AlignX.CENTER, PhysicsComponent.AlignY.CENTER);
     oxygenEater.getComponent(HitboxComponent.class).setAsBoxAligned(new Vector2(1f, 1f),
             PhysicsComponent.AlignX.CENTER, PhysicsComponent.AlignY.CENTER);
+
+    // configure animation effects position
+    AnimationEffectsComponent animationEffectsComponent = oxygenEater.getComponent(AnimationEffectsComponent.class);
+    animationEffectsComponent.setOffset(new Vector2(
+            oxygenEater.getScale().scl(0.5f).x - animationEffectsComponent.getScale().scl(0.5f).x,
+            oxygenEater.getScale().y - 0.3f
+    ));
 
     return oxygenEater;
   }
@@ -345,8 +373,15 @@ public class NPCFactory {
                     new ArrayList<>(Arrays.asList((EntityType.PLAYER), (EntityType.PLANT)))))
             .addComponent(new CombatStatsComponent(config.health, config.baseAttack));
 
-
     dragonfly.scaleHeight(1.2f);
+
+    // configure animation effects position
+    AnimationEffectsComponent animationEffectsComponent = dragonfly.getComponent(AnimationEffectsComponent.class);
+    animationEffectsComponent.setOffset(new Vector2(
+            dragonfly.getScale().scl(0.5f).x - animationEffectsComponent.getScale().scl(0.5f).x,
+            dragonfly.getScale().y - 0.3f
+    ));
+
     return dragonfly;
   }
 
@@ -398,11 +433,24 @@ public class NPCFactory {
    * @return entity
    */
   private static Entity createBaseAnimal(EntityType type) {
+    AnimationEffectsComponent animationEffectsComponent = new AnimationEffectsComponent(
+            ServiceLocator.getResourceService().getAsset(
+                    "images/animals/animal_effects.atlas", TextureAtlas.class)
+    );
+
+    animationEffectsComponent.addAnimation("heart", Float.MAX_VALUE);
+    animationEffectsComponent.addAnimation("fed", Float.MAX_VALUE);
+    animationEffectsComponent.addAnimation("exclamation", Float.MAX_VALUE);
+    animationEffectsComponent.addAnimation("red_exclamation", Float.MAX_VALUE);
+    animationEffectsComponent.setScale(Vector2Utils.ONE.cpy().scl(11f / 16f));
+
     Entity animal = new Entity(type)
             .addComponent(new PhysicsComponent())
             .addComponent(new PhysicsMovementComponent())
             .addComponent(new HitboxComponent().setLayer(PhysicsLayer.NPC))
-            .addComponent(new BlinkComponent());
+            .addComponent(new BlinkComponent())
+            .addComponent(animationEffectsComponent)
+            .addComponent(new AnimalEffectsController());
 
     if (type != EntityType.DRAGONFLY && type != EntityType.BAT) {
       animal.addComponent(new ColliderComponent());
